[gd_scene load_steps=5 format=3 uid="uid://df5nbiygwfdeb"]

[ext_resource type="Script" path="res://Nodes/task_details/resource_ui_entry.gd" id="1_4qxd5"]
[ext_resource type="Texture2D" uid="uid://dmrhlqq3p4y0g" path="res://Sprites/Package.png" id="2_bsoio"]
[ext_resource type="Texture2D" uid="uid://d1prnk2q4ke5m" path="res://Sprites/arrow.png" id="3_yp1id"]

[sub_resource type="LabelSettings" id="LabelSettings_rc13s"]
line_spacing = 0.0
font_size = 18

[node name="Resource" type="GridContainer"]
offset_right = 30.0
offset_bottom = 61.0
size_flags_horizontal = 3
columns = 3
script = ExtResource("1_4qxd5")

[node name="IconContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResourceIcon" type="TextureRect" parent="IconContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource("2_bsoio")
expand_mode = 4

[node name="ResourceAmount" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "44"
label_settings = SubResource("LabelSettings_rc13s")
horizontal_alignment = 1
vertical_alignment = 2

[node name="IncreaseContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Offset" type="MarginContainer" parent="IncreaseContainer"]
layout_mode = 2
theme_override_constants/margin_top = 6

[node name="IncreaseIcon" type="TextureRect" parent="IncreaseContainer/Offset"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_yp1id")
expand_mode = 4
